--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,13 +50,13 @@ body {
 .carousel .item {
   height: 500px;
   background-color: #777;
+  overflow: hidden;
 }
 .carousel-inner > .item > img {
   position: absolute;
   top: 0;
   left: 0;
   min-width: 100%;
-  height: 500px;
 }
 
 
@@ -152,7 +152,7 @@ body {
 }
 
 #header .moto h1 {
-	margin-top : 150px;
+	margin: 70px 0px 0px 50px;
 }
 
 #header .schedule {
@@ -170,6 +170,37 @@ body {
 }
 
 .navbar-inverse {
-	background-color: rgba(34, 34, 34, 0.89);
+	background-color: rgba(34, 34, 34, 0.6);
 	border-color: #080808;
+}
+
+.navbar-inverse .navbar-nav > li > a {
+	color: #ddd;
+}
+
+footer {
+	border-top: 1px solid #ccc;
+	border-bottom: 1px solid #ccc;
+	height: 300px;
+}
+
+footer .footer_logo {
+	float: left;
+	width: 200px;
+	background-color: #fff;
+}
+
+footer .footer_logo img {
+	width: 200px;
+	margin: 75px 0px 0px 0px;
+}
+
+footer .footer_menu {
+	margin: 50px 0px 0px 200px;
+	float: left;
+}
+
+footer .footer_contact {
+	margin: 50px 100px 0px 10px;
+	float: right;
 }
